# ScenarioCreativeAutomation

./: .gitignore  .replit  README.md  app.py  demo.sh  main.py  pyproject.toml  replit.md  test_moderation.py
attached_assets/: Pasted-Scenario-Crea4ve-Automa4on-for-Scalable-Social-Ad-Campaigns-Client-A-global-consumer-goods-company-1761163725053_1761163725054.txt
examples/: campaign_brief.json  campaign_brief.yaml  multi_product_campaign.yaml
src/: __init__.py  asset_manager.py  azure_uploader.py  brief_parser.py  config.py  content_moderator.py  image_generator.py  image_processor.py  pipeline.py  translator.py
static/css/: style.css
templates/: index.html
